[package]
name = "bloguen"
description = "Generate a blogue from Markdown (again)"
repository = "https://github.com/nabijaczleweli/bloguen"
documentation = "https://cdn.rawgit.com/nabijaczleweli/bloguen/doc/bloguen/index.html"
readme = "README.md"
keywords = ["generate", "blog", "markdown"]
categories = ["command-line-utilities", "template-engine"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in bloguen.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]

[dependencies]
safe-transmute = "0.8"
serde_derive = "1.0"
lazy_static = "1.1"
tabwriter = "1.1"
walkdir = "2.2"
chrono = "0.4"
comrak = "0.2"
rayon = "1.0"
regex = "1.0"
serde = "1.0"
clap = "2.32"
rand = "0.5"
toml = "0.4"
crc = "1.8"
url = "1.7"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["lmcons", "winnls"]

[target.'cfg(not(target_os = "windows"))'.dependencies.libc]
version = "0.2"


[build-dependencies]
reqwest = "0.8"

[target.'cfg(not(target_os = "windows"))'.build-dependencies.gcc]
version = "0.3"


[[bin]]
name = "bloguen"
test = false
doc = false
