[package]
name = "bloguen"
description = "Generate a blogue from a flat TOML-based descriptor"
repository = "https://github.com/nabijaczleweli/bloguen"
documentation = "https://rawcdn.githack.com/nabijaczleweli/bloguen/doc/bloguen/index.html"
readme = "README.md"
keywords = ["generate", "blog", "markdown"]
categories = ["command-line-utilities", "template-engine"]
license = "MIT"
# Remember to also update in appveyor.yml
# Remember to also update in bloguen.md
# Remember to also update in src/
version = "0.1.1"
# Remember to also update in bloguen.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]

[dependencies]
percent-encoding = "2.1"
safe-transmute = "0.11.0-rc.2"
rand_xorshift = "0.2"
serde_derive = "1.0"
lazy_static = "1.3"
bidir-map = "1.0"
tabwriter = "1.1"
jetscii = "0.4"
unicase = "2.4"
walkdir = "2.2"
chrono = "0.4"
comrak = "0.6"
rayon = "1.1"
regex = "1.2"
serde = "1.0"
clap = "2.33"
rand = "0.7"
toml = "0.5"
crc = "1.8"
url = "2.1"

[dependencies.uuid]
version = "0.7"
features = ["v5"]

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["lmcons", "winnls"]

[target.'cfg(not(target_os = "windows"))'.dependencies.libc]
version = "0.2"


[target.'cfg(not(target_os = "windows"))'.build-dependencies.cc]
version = "1.0"


[[bin]]
name = "bloguen"
test = false
doc = false
